WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301390
Fix some issues with bmalloc header inclusions.
https://bugs.webkit.org/show_bug.cgi?id=301390
Summary
Fix some issues with bmalloc header inclusions.
Mark Lam
Reported
2025-10-23 18:29:23 PDT
1. In WTFConfig.cpp, we should only include bmalloc/pas_mte_config.h if BUSE(LIBPAS). This is condition for its inclusion elsewhere (see malloc's Gigacage.cpp and VMAllocate.cpp), but is neglected here. 2. VMAllocate.h should include BPlatform.h instead of BCompiler.h. BPlatform.h defines the BOS(), BCPU(), and BENABLE() macros that VMAllocate.h relies on below this. BCompiler.h does not. BPlatform.h also includes BCompiler.h. The only reason that this hasn't caused a problem so far is because VMAllocate.h also includes BAssert.h, which happens to include BPlatform.h. Regardless, we should fix this so that the includes truly reflect what is needed.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-10-23 18:29:51 PDT
<
rdar://problem/163306584
>
Mark Lam
Comment 2
2025-10-23 18:59:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52923
EWS
Comment 3
2025-10-24 08:52:15 PDT
Committed
302094@main
(f353ac71e5b8): <
https://commits.webkit.org/302094@main
> Reviewed commits have been landed. Closing PR #52923 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug