Fix some issues with bmalloc header inclusions. https://bugs.webkit.org/show_bug.cgi?id=301390 rdar://163306584

Reviewed by Dan Hecht.

1. In WTFConfig.cpp, we should only include bmalloc/pas_mte_config.h if BUSE(LIBPAS).  This is
   condition for its inclusion elsewhere (see malloc's Gigacage.cpp and VMAllocate.cpp), but is
   neglected here.

2. VMAllocate.h should include BPlatform.h instead of BCompiler.h.  BPlatform.h defines the
   BOS(), BCPU(), and BENABLE() macros that VMAllocate.h relies on below this.  BCompiler.h
   does not.  BPlatform.h also includes BCompiler.h.  The only reason that this hasn't caused a
   problem so far is because VMAllocate.h also includes BAssert.h, which happens to include
   BPlatform.h.  Regardless, we should fix this so that the includes truly reflect what is
   needed.

No new tests because these issues turn out to be benign, and have no observable impact other
than consuming some unnecessary build time, and failing to express the #include dependencies
that are actually needed.

* Source/WTF/wtf/WTFConfig.cpp:
* Source/bmalloc/bmalloc/VMAllocate.h:

Canonical link: https://commits.webkit.org/302094@main